--- a/index.html
+++ b/index.html
@@ -500,9 +500,9 @@
      <p></p>
      <p>e-mail: XXX | phone: XXX</p>
      <nav class="footer-nav">
-       <a href="/privacy-policy.html" target="_blank">Политика конфиденциальности</a> |
-       <a href="/cookie-policy.html" target="_blank">Политика cookie</a> |
-       <a href="/user-agreement.html "target="_blank">Пользовательское соглашение</a> 
+       <a href="/docs/privacy-policy.html" target="_blank">Политика конфиденциальности</a> |
+       <a href="/docs/cookie-policy.html" target="_blank">Политика cookie</a> |
+       <a href="/docs/user-agreement.html "target="_blank">Пользовательское соглашение</a> 
      </nav>
     <div class="footer-column">
   </div>
