обновленные основные файлы
index css

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             </div>
             <div class="nav-menu" id="nav-menu">
                 <a href="index.html" class="nav-link active">Галерея</a>
-                <a href="about.html" class="nav-link">About</a>
-                <a href="contact.html" class="nav-link">Contact</a>
+                <a href="about.html" class="nav-link">Обо мне</a>
+                <a href="contact.html" class="nav-link">Контакты</a>
             </div>
             <div class="hamburger" id="hamburger">
                 <span class="bar"></span>
@@ -34,11 +34,8 @@
     <section class="hero">
         <div class="hero-overlay"></div>
         <div class="hero-content">
-            <h2>Переживая прекрасное</h2>
-            <p>коллекция картин для души и интерьера
-<br><br>
-
-</p>
+            <h2>Фрагменты пережитой красоты</h2>
+            <p>коллекция картин для души и интерьера</p>
         </div>
     </section>
 
@@ -486,13 +483,6 @@
     <script src="js/main.js"></script>
     <script src="js/gallery.js"></script>
 
-
-
-<footer class="site-footer">
-    <div class="footer-container">
-        
-
-
 <footer class="site-footer">
   <div class="footer-container">
     <div class="footer-column">
@@ -500,20 +490,16 @@
      <p></p>
      <p>e-mail: XXX | phone: XXX</p>
      <nav class="footer-nav">
-       <a href="/docs/privacy-policy.html" target="_blank">Политика конфиденциальности</a> |
-       <a href="/docs/cookie-policy.html" target="_blank">Политика cookie</a> |
-       <a href="/docs/user-agreement.html "target="_blank">Пользовательское соглашение</a> 
+       <a href="/privacy-policy.html" target="_blank">Политика конфиденциальности</a> |
+       <a href="/cookie-policy.html" target="_blank">Политика cookie</a> |
+       <a href="/user-agreement.html "target="_blank">Пользовательское соглашение</a> 
      </nav>
-    <div class="footer-column">
+    </div>
   </div>
 </footer>
-
 
 <script src="js/main.js"></script>
 <script src="js/consent.js"></script>
 
-
-
 </body>
 </html>
-
