снова базовые файлы

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="css/consent.css">
+  <link rel="stylesheet" href="/css/consent.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ArTPalette.ru - Capturing Beautiful Creatures</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
@@ -17,9 +17,7 @@
             <div class="nav-logo">
                 <h1>arTPalette.ru</h1>
             </div>
-            <div class="nav-menu" id="nav-menu">
-                <a href="index.html" class="nav-link active">Галерея</a>
-                <a href="about.html" class="nav-link">Обо мне</a>
+            <div class="nav-menu" id="nav-menu">                <a href="index.html" class="nav-link active">Галерея</a>          <a href="about.html" class="nav-link">Обо мне</a>
                 <a href="contact.html" class="nav-link">Контакты</a>
             </div>
             <div class="hamburger" id="hamburger">
@@ -480,8 +478,8 @@
         </div>
     </section>
 
-    <script src="js/main.js"></script>
-    <script src="js/gallery.js"></script>
+    <script src="/js/main.js"></script>
+    <script src="/js/gallery.js"></script>
 
 <footer class="site-footer">
   <div class="footer-container">
@@ -498,8 +496,8 @@
   </div>
 </footer>
 
-<script src="js/main.js"></script>
-<script src="js/consent.js"></script>
+<script src="/js/main.js"></script>
+<script src="/js/consent.js"></script>
 
 </body>
 </html>
