индекс откат к версии 5

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="/css/consent.css">
+  <link rel="stylesheet" href="css/consent.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ArTPalette.ru - Capturing Beautiful Creatures</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <title>ArTPalette.ru - Pictures Paintings Artpieces</title>
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
@@ -17,7 +17,9 @@
             <div class="nav-logo">
                 <h1>arTPalette.ru</h1>
             </div>
-            <div class="nav-menu" id="nav-menu">                <a href="index.html" class="nav-link active">Галерея</a>          <a href="about.html" class="nav-link">Обо мне</a>
+            <div class="nav-menu" id="nav-menu">
+                <a href="index.html" class="nav-link active">Галерея</a>
+                <a href="about.html" class="nav-link">About</a>
                 <a href="contact.html" class="nav-link">Контакты</a>
             </div>
             <div class="hamburger" id="hamburger">
@@ -32,8 +34,11 @@
     <section class="hero">
         <div class="hero-overlay"></div>
         <div class="hero-content">
-            <h2>Фрагменты пережитой красоты</h2>
-            <p>коллекция картин для души и интерьера</p>
+            <h2>Фрагменты красоты</h2>
+            <p>коллекция картин для души и интерьера
+<br><br>
+
+</p>
         </div>
     </section>
 
@@ -478,8 +483,15 @@
         </div>
     </section>
 
-    <script src="/js/main.js"></script>
-    <script src="/js/gallery.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/gallery.js"></script>
+
+
+
+<footer class="site-footer">
+    <div class="footer-container">
+        
+
 
 <footer class="site-footer">
   <div class="footer-container">
@@ -488,16 +500,20 @@
      <p></p>
      <p>e-mail: XXX | phone: XXX</p>
      <nav class="footer-nav">
-       <a href="/privacy-policy.html" target="_blank">Политика конфиденциальности</a> |
-       <a href="/cookie-policy.html" target="_blank">Политика cookie</a> |
-       <a href="/user-agreement.html "target="_blank">Пользовательское соглашение</a> 
+       <a href="privacy-policy.html" target="_blank">Политика конфиденциальности</a> |
+       <a href="cookie-policy.html" target="_blank">Политика cookie</a> |
+       <a href="user-agreement.html "target="_blank">Пользовательское соглашение</a> 
      </nav>
-    </div>
+    <div class="footer-column">
   </div>
 </footer>
 
-<script src="/js/main.js"></script>
-<script src="/js/consent.js"></script>
+
+<script src="js/main.js"></script>
+<script src="js/consent.js"></script>
+
+
 
 </body>
 </html>
+
