--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>  <link rel="stylesheet" href="css/consent.css">
+<head>
+    <link rel="stylesheet" href="css/consent.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ArTPalette.ru - Capturing Beautiful Creatures</title>
-    <link rel="stylesheet" href="css/styles.css">    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
@@ -15,7 +17,9 @@
             <div class="nav-logo">
                 <h1>arTPalette.ru</h1>
             </div>
-            <div class="nav-menu" id="nav-menu">                <a href="index.html" class="nav-link active">Галерея</a>          <a href="about.html" class="nav-link">Обо мне</a>
+            <div class="nav-menu" id="nav-menu">
+                <a href="index.html" class="nav-link active">Галерея</a>
+                <a href="about.html" class="nav-link">Обо мне</a>
                 <a href="contact.html" class="nav-link">Контакты</a>
             </div>
             <div class="hamburger" id="hamburger">
@@ -477,6 +481,7 @@
     </section>
     <script src="js/main.js"></script>
     <script src="js/gallery.js"></script>
+
 <footer class="site-footer">
   <div class="footer-container">
     <div class="footer-column">
@@ -484,9 +489,9 @@
      <p></p>
      <p>e-mail: XXX | phone: XXX</p>
      <nav class="footer-nav">
-       <a href="/privacy-policy.html" target="_blank">Политика конфиденциальности</a> |
-       <a href="/cookie-policy.html" target="_blank">Политика cookie</a> |
-       <a href="/user-agreement.html "target="_blank">Пользовательское соглашение</a> 
+       <a href="privacy-policy.html" target="_blank">Политика конфиденциальности</a> |
+       <a href="cookie-policy.html" target="_blank">Политика cookie</a> |
+       <a href="user-agreement.html" target="_blank">Пользовательское соглашение</a> 
      </nav>
     </div>
   </div>
@@ -497,3 +502,4 @@
 
 </body>
 </html>
+
