фоновый рисунок исправлен

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
         <div class="container">
             <div class="about-content">
                 <div class="about-text">
-                    <h1 class="page-title">About the Artist</h1>
+                    <h2 class="page-title">Об авторе</h1>
                     
                     <div class="manifesto">
                         <h2>My Artistic Manifesto</h2>
