--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <div class="hero-overlay"></div>
+       <div class="hero-overlay"></div>
         <div class="hero-content">
-            <h2>Фрагменты пережитой красоты</h2>
-            <p>коллекция картин для души и интерьера</p>
+            <h2>Фрагменты красоты</h2>
+            <p>коллекция картин для глаз, души и интерьера</p>
         </div>
     </section>
 
@@ -43,7 +43,7 @@
     <section class="gallery-section">
         <div class="container">
             <div class="gallery-header">
-                <h3 class="section-title">Галерея</h3>
+                <h3 class="section-title">галерея</h3>
                 <div class="gallery-controls">
                     <button class="view-toggle active" data-view="mosaic">Плитка</button>
                     <button class="view-toggle" data-view="standard">Стандартный вид</button>
