--- a/historical/artwork-1old.html
+++ b/historical/artwork-1old.html
@@ -103,7 +103,7 @@
                             <source src="images/videos/artwork-1-process.webm" type="video/webm">
                             Your browser does not support the video tag.
                         </video>
-                        <button class="fullscreen-btn">Full Screen</button>
+                      <button class="fullscreen-btn">Full Screen</button> <!-- НОВАЯ КНОПКА -->
                     </div>
                 </div>
 
