--- a/artwork-1.html
+++ b/artwork-1.html
@@ -125,9 +125,9 @@
     <p>Адрес: г. Москва, ул. Примерная, д. 1</p>
     <p>Эл. почта: XXX | Телефон: XXX</p>
     <nav class="footer-nav">
-      <a href="/privacy-policy.html">Политика конфиденциальности</a> |
-      <a href="/cookie-policy.html">Политика cookie</a> |
-      <a href="/user-agreement.html">Пользовательское соглашение</a>
+      <a href="privacy-policy.html">Политика конфиденциальности</a> |
+      <a href="cookie-policy.html">Политика cookie</a> |
+      <a href="user-agreement.html">Пользовательское соглашение</a>
     </nav>
   </div>
 </footer>
