--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <section class="hero">
        <div class="hero-overlay"></div>
         <div class="hero-content">
-            <h2>Фрагменты красоты</h2>
-            <p>коллекция картин для глаз, души и интерьера</p>
+            <!--<h2>Фрагменты красоты</h2>-->
+            <p>КАРТИНЫ ДЛЯ НАСТРОЕНИЯ И ИНТЕРЬЕРА</p>
         </div>
     </section>
 
@@ -45,8 +45,8 @@
             <div class="gallery-header">
                 <h3 class="section-title">галерея</h3>
                 <div class="gallery-controls">
-                    <button class="view-toggle active" data-view="mosaic">Плитка</button>
-                    <button class="view-toggle" data-view="standard">Стандартный вид</button>
+                    <button class="view-toggle active" data-view="mosaic">Мозаика</button>
+                    <button class="view-toggle" data-view="standard">Плитка</button>
                 </div>
             </div>
 
